# aic24-nvidia

./: .gitignore  CLAUDE.md  README.md  pipeline.py  pyproject.toml
.github/workflows/: lint.yml  tests.yml
aic24_nvidia/: bootstrap.py  config.py  errors.py  hub.py  manifest.py  paths.py  registry.py  results.py  tracking_params.py  visualize.py  world_metrics.py  world_projection.py  world_stitch.py  world_tracks.py
aic24_nvidia/adapter/: calibration.py  gt_converter.py  nvidia_to_yachiyo.py  video.py
aic24_nvidia/diagnostics/: __init__.py  linking_attribution.py
aic24_nvidia/models/: backends.py  detect_yolo.py  pose_rtmpose.py  registry.py  reid_solider.py
aic24_nvidia/models/solider/: __init__.py  swin_transformer.py
aic24_nvidia/stages/: adapt.py  base.py  detect.py  evaluate.py  extract_frames.py  mct.py  pose.py  reid.py  sct.py
configs/: baseline.yaml  scene_041_v31.yaml  scene_041_v32.yaml  scene_041_v33.yaml  warehouse_001_30s.yaml  warehouse_001_30s_tuned.yaml
dashboard/: app.py
docs/: commands.md  multi-camera-tracking-walkthrough.md  yachiyo_entrypoints.md
docs/superpowers/notes/: 2026-05-28-senior-explainer.md  2026-05-28-world-projection-results.md
experiments/: README.md  __init__.py  _lib.py  compare.py  registry.yaml  run.py
notebooks/: reid_finetune.ipynb
patches/: trackeval.patch  yachiyo.patch
results/: README.md  labels.json  runs.jsonl
scripts/: archive_run.sh  bootstrap_external.sh  remote_setup.sh  restore_run.sh  results.py  verify_patches.sh
tests/integration/: conftest.py  test_tiny_scene.py
tests/unit/: test_adapter_calibration.py  test_adapter_gt.py  test_adapter_video.py  test_atomic_stage_manifest_paths.py  test_base_stage.py  test_bootstrap.py  test_calibration_per_camera.py  test_config.py  test_detect_yolo.py  test_errors.py  test_evaluate_world_smoother_wiring.py  test_evaluate_world_stitch_wiring.py  test_evaluate_wrapper.py  test_experiment_harness.py  test_hub.py  test_linking_attribution.py  test_linking_gate_sweep_registry.py  test_manifest.py  test_mct_world_projection_wiring.py  test_model_config.py  test_model_registry.py  test_param_propagation.py  test_paths.py  test_pipeline_registry_consistency.py  test_pose_rtmpose.py  test_reid_solider.py  test_reid_solider_discriminative.py  test_results.py  test_stage_registry.py  test_stage_wiring.py  test_subprocess_interpreter.py  test_tracking_params.py  test_world_metrics.py  test_world_projection.py  test_world_smoother.py  test_world_stitch.py  test_world_stitch_sweep_registry.py  test_world_tracks.py
(+15 files in other folders)
