[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aic24-nvidia"
version = "0.1.0"
description = "Run AIC24_Track1_YACHIYO_RIIPS on NVIDIA MTMC_Tracking_2024"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pyyaml>=6.0",
    "torch>=2.0",
    "streamlit>=1.30",
    "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aic24_nvidia*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
